[package]
name = "jsonrpcli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive", "env"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ureq = "2.9.7"
