[package]
name = "jsonrpcli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive", "env"] }
http = "1.1.0"
http-body-util = "0.1.2"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.5", features = ["full"] }
openrpc-types = "0.4.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }
